style: standardize code formatting and improve readability across multiple files feat: enhance home page layout and display course details fix: correct header branding text

--- a/src/resources/scss/app.scss
+++ b/src/resources/scss/app.scss
@@ -1,5 +1,5 @@
 @use 'variables';
 
-h1 {
-  color: variables.$color;
+.card-course-item {
+    margin-top: 16px;
 }
